; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/extr_pl330.c__setup_req.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/extr_pl330.c__setup_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pl330_dmac = type { i32 }
%struct.pl330_thread = type { i32, %struct._pl330_req* }
%struct._pl330_req = type { i32, i32* }
%struct._xfer_spec = type { i32 }

@CCR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pl330_dmac*, i32, %struct.pl330_thread*, i32, %struct._xfer_spec*)* @_setup_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_setup_req(%struct.pl330_dmac* %0, i32 %1, %struct.pl330_thread* %2, i32 %3, %struct._xfer_spec* %4) #0 {
  %6 = alloca %struct.pl330_dmac*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.pl330_thread*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct._xfer_spec*, align 8
  %11 = alloca %struct._pl330_req*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store %struct.pl330_dmac* %0, %struct.pl330_dmac** %6, align 8
  store i32 %1, i32* %7, align 4
  store %struct.pl330_thread* %2, %struct.pl330_thread** %8, align 8
  store i32 %3, i32* %9, align 4
  store %struct._xfer_spec* %4, %struct._xfer_spec** %10, align 8
  %14 = load %struct.pl330_thread*, %struct.pl330_thread** %8, align 8
  %15 = getelementptr inbounds %struct.pl330_thread, %struct.pl330_thread* %14, i32 0, i32 1
  %16 = load %struct._pl330_req*, %struct._pl330_req** %15, align 8
  %17 = load i32, i32* %9, align 4
  %18 = zext i32 %17 to i64
  %19 = getelementptr inbounds %struct._pl330_req, %struct._pl330_req* %16, i64 %18
  store %struct._pl330_req* %19, %struct._pl330_req** %11, align 8
  %20 = load %struct._pl330_req*, %struct._pl330_req** %11, align 8
  %21 = getelementptr inbounds %struct._pl330_req, %struct._pl330_req* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  store i32* %22, i32** %12, align 8
  store i32 0, i32* %13, align 4
  %23 = load %struct._pl330_req*, %struct._pl330_req** %11, align 8
  %24 = getelementptr inbounds %struct._pl330_req, %struct._pl330_req* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @PL330_DBGMC_START(i32 %25)
  %27 = load i32, i32* %7, align 4
  %28 = load i32*, i32** %12, align 8
  %29 = load i32, i32* %13, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  %32 = load i32, i32* @CCR, align 4
  %33 = load %struct._xfer_spec*, %struct._xfer_spec** %10, align 8
  %34 = getelementptr inbounds %struct._xfer_spec, %struct._xfer_spec* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i64 @_emit_MOV(i32 %27, i32* %31, i32 %32, i32 %35)
  %37 = load i32, i32* %13, align 4
  %38 = sext i32 %37 to i64
  %39 = add nsw i64 %38, %36
  %40 = trunc i64 %39 to i32
  store i32 %40, i32* %13, align 4
  %41 = load %struct.pl330_dmac*, %struct.pl330_dmac** %6, align 8
  %42 = load i32, i32* %7, align 4
  %43 = load i32*, i32** %12, align 8
  %44 = load i32, i32* %13, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %43, i64 %45
  %47 = load %struct._xfer_spec*, %struct._xfer_spec** %10, align 8
  %48 = call i64 @_setup_xfer(%struct.pl330_dmac* %41, i32 %42, i32* %46, %struct._xfer_spec* %47)
  %49 = load i32, i32* %13, align 4
  %50 = sext i32 %49 to i64
  %51 = add nsw i64 %50, %48
  %52 = trunc i64 %51 to i32
  store i32 %52, i32* %13, align 4
  %53 = load i32, i32* %7, align 4
  %54 = load i32*, i32** %12, align 8
  %55 = load i32, i32* %13, align 4
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds i32, i32* %54, i64 %56
  %58 = load %struct.pl330_thread*, %struct.pl330_thread** %8, align 8
  %59 = getelementptr inbounds %struct.pl330_thread, %struct.pl330_thread* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 8
  %61 = call i64 @_emit_SEV(i32 %53, i32* %57, i32 %60)
  %62 = load i32, i32* %13, align 4
  %63 = sext i32 %62 to i64
  %64 = add nsw i64 %63, %61
  %65 = trunc i64 %64 to i32
  store i32 %65, i32* %13, align 4
  %66 = load i32, i32* %7, align 4
  %67 = load i32*, i32** %12, align 8
  %68 = load i32, i32* %13, align 4
  %69 = sext i32 %68 to i64
  %70 = getelementptr inbounds i32, i32* %67, i64 %69
  %71 = call i64 @_emit_END(i32 %66, i32* %70)
  %72 = load i32, i32* %13, align 4
  %73 = sext i32 %72 to i64
  %74 = add nsw i64 %73, %71
  %75 = trunc i64 %74 to i32
  store i32 %75, i32* %13, align 4
  %76 = load i32, i32* %13, align 4
  ret i32 %76
}

declare dso_local i32 @PL330_DBGMC_START(i32) #1

declare dso_local i64 @_emit_MOV(i32, i32*, i32, i32) #1

declare dso_local i64 @_setup_xfer(%struct.pl330_dmac*, i32, i32*, %struct._xfer_spec*) #1

declare dso_local i64 @_emit_SEV(i32, i32*, i32) #1

declare dso_local i64 @_emit_END(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
